# cafram

./: .envrc  .gitignore  .pylintrc  README.md  RUN_TESTS.sh  Taskfile.yml  __init__.py  base.py  doc.md  fix_qa.sh  gen_graph.sh  mypy.ini  nodes.py  pyproject.toml  run_linting.sh  run_live_tests.sh  run_qa.sh  run_tests.sh  utils.py
cafram/: base.py  common.py  ctrl.py  ctrl2.py  decorators.py  errors.py  nodes.py  nodes2.py  nodes3.py  poc_metclass.py  tools.py  utils.py
cafram/lib/: flattify.py  log_colors.py  logger.py  utils.py
cafram/mixins/: __init__.py  base.py  hier.py  path.py  tree.py
cafram/nodes/: __init__.py  ctrl.py  engine.py  errors.py
cafram/nodes/comp/: __init__.py  base.py  hier.py  path.py  tree.py
docs/: alt.md  api_usage.md  build.sh  changes.rst  conf.py  contrib.rst  index.rst  license.rst
examples/: app1.py  app_apiv2.py  app_ident.py  app_inherit.py  app_inherit_deco.py  app_logger.py  app_paasify_demo.py  app_paasify_demo_deco.py  example1.py
features/steps/: test_node_dict.py
jupyter/: Cafram2 - ConfDictMixin.ipynb  Tutorial.ipynb
tests/: common_lib.py  test_cafram_base.py  test_cafram_misc.py  test_cafram_regressions.py  test_cafram_utils.py  test_metaclasses.py  test_mixin_hier.py  test_mixins_base.py  test_nodes.py  test_nodes2.py  test_nodes_comp.py  test_nodes_engine.py  test_snippets.py  test_v1.py
tests/test_cafram_regressions/: test_autoconf_get_children_regressions.yml  test_autoconf_get_values_regressions.yml
