[tool.poetry]
name = "cafram"
version = "0.1.0"
description = "Config as Framework"
authors = ["mrjk"]
license = "GPL"
readme = "README.md"
packages = [{ include = "cafram" }]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.16.0"
"ruamel.yaml" = "^0.17.21"
sh = "^1.14.3"
python-log-indenter = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-clarity = "^1.0.1"
black = "^22.8.0"
behave = "^1.2.6"
pylint = "^2.15.3"
pytest-regressions = "^2.4.1"
pytest-watcher = "^0.2.6"
pytest-cov = "^3.0.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^6.2.0"
sphinx-tabs = "^3.4.1"
sphinx-rtd-theme = "^1.2.2"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
cafram = "cafram"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
#log_cli_level = "NOTSET"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

